@@ -1,2 +1,5 @@
+# copy to bin directory of apache
 export CATALINA_OPTS="-XX:+CMSClassUnloadingEnabled"
-export JAVA_OPTS="-Xmx512m -XX:MaxPermSize=256m  -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n"
+##export JAVA_OPTS="-Xmx512m -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n"
+export JRE_HOME="/opt/java/java8"
+export JAVA_HOME="/opt/java/java8"
